<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.ui.consulta.ConsultaFragment">

    <!--
    /*
     *	This content is generated from the API File Info.
     *	(Alt+Shift+Ctrl+I).
     *
     *	@desc
     *	@file 		nueva_consulta
     *	@date 		Thursday 08th of February 2024 12:23:28 AM
     *	@title 		Ventanas
     *	@author
     *	@keywords
     *	@generator 	Export Kit v1.3.figma
     *
     */
    -->
    <RelativeLayout
        android:id="@+id/nueva_consulta"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/content_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/img_fondo"
                android:layout_width="match_parent"
                android:layout_height="390dp"
                android:src="@drawable/forma_consulta"
                android:translationY="-10dp" />

            <TextView
                android:id="@+id/escribe_tu_consulta_de_forma_concisa_y_sea_facil_de_entender_"
                android:layout_width="349.4dp"
                android:layout_height="82.4dp"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="35dp"
                android:text="@string/escribe_tu_consulta_de_forma_concisa_y_sea_facil_de_entender__string"
                android:textColor="@color/iniciar_sesion_color"
                android:textSize="24sp" />

            <RelativeLayout
                android:id="@+id/caja_titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:layout_marginTop="106dp">


                <TextView
                    android:id="@+id/label_ek1"
                    android:layout_width="343.4dp"
                    android:layout_height="26.4dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/label_ek1_string"
                    android:textColor="@color/iniciar_sesion_color"
                    android:textSize="14sp"
                    android:textStyle="bold" />


                <RelativeLayout
                    android:id="@+id/input_ek4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="30dp">

                    <EditText
                        android:id="@+id/editTitulo"
                        android:layout_width="335dp"
                        android:layout_height="50dp"
                        android:background="@drawable/_bg__input_ek3_shape"
                        android:ems="10"
                        android:hint="@string/placeholder_crear_string"
                        android:inputType="text"
                        android:textColor="@color/___text_color" />


                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/caja_descripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="185dp">


                <TextView
                    android:id="@+id/tvDescripcionConsulta"
                    android:layout_width="343.4dp"
                    android:layout_height="26.4dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/label_string"
                    android:textColor="@color/iniciar_sesion_color"
                    android:textSize="14sp"
                    android:textStyle="bold" />


                <RelativeLayout
                    android:id="@+id/input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="30dp">

                    <EditText
                        android:id="@+id/editDescripcion"
                        android:layout_width="335dp"
                        android:layout_height="195dp"
                        android:background="@drawable/_bg__input_ek3_shape"
                        android:ems="10"
                        android:gravity="start|top"
                        android:hint="@string/placeholder_descripcion_string"
                        android:inputType="textMultiLine"
                        android:textColor="@color/___text_color" />


                </RelativeLayout>

            </RelativeLayout>

            <TextView
                android:id="@+id/agrega_categorias_para_que_la_gente_encuentre_mas_rapido_tu_consulta_"
                android:layout_width="359dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19dp"
                android:layout_marginTop="425dp"
                android:text="@string/agrega_categorias_para_que_la_gente_encuentre_mas_rapido_tu_consulta__string"
                android:textColor="@color/_bg__frame_botones_ek1_color"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCategorias"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_below="@+id/agrega_categorias_para_que_la_gente_encuentre_mas_rapido_tu_consulta_"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="14dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="5dp"
                android:scrollbars="horizontal"/>

            <TextView
                android:id="@+id/sube_una_imagen_si_crees_que_ayuda_"
                android:layout_width="186dp"
                android:layout_height="81dp"
                android:layout_marginLeft="43dp"
                android:layout_marginTop="565dp"
                android:text="@string/sube_una_imagen_si_crees_que_ayuda__string"
                android:textColor="@color/_bg__frame_botones_ek1_color"
                android:textSize="20sp" />


            <RelativeLayout
                android:id="@+id/subir_archivo"
                android:layout_width="68dp"
                android:layout_height="67dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="246dp"
                android:layout_marginTop="566dp"
                android:layout_marginEnd="64dp">

                <ImageView
                    android:id="@+id/icon_ek7"
                    android:layout_width="40.5dp"
                    android:layout_height="49.5dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="9dp"
                    android:layout_marginEnd="13dp"
                    android:layout_marginBottom="9dp"
                    android:contentDescription="icon_ek7"
                    android:src="@drawable/icon_ek7" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btCrear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="111dp"
                android:layout_marginTop="666dp"
                android:elevation="4dp">

                <View
                    android:id="@+id/_bg__boton_iniciar_sesion_ek1"
                    android:layout_width="160dp"
                    android:layout_height="44dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/_bg__boton_iniciar_sesion_ek1_shape" />

                <TextView
                    android:id="@+id/iniciar_sesion"
                    android:layout_width="119dp"
                    android:layout_height="24.86dp"
                    android:layout_gravity="center_horizontal|center"
                    android:layout_marginLeft="21.22dp"
                    android:layout_marginTop="12.57dp"
                    android:gravity="center"
                    android:text="@string/crear_string"
                    android:textAllCaps="true"
                    android:textColor="@color/iniciar_sesion_color"
                    android:textSize="20sp" />

            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>
</ScrollView>